--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,15 @@
   cursor: pointer;
   outline: none;
   transition: background 0.2s ease;
+  width: 100%;
+  -webkit-appearance: menulist;
+  appearance: menulist;
+}
+
+.setting-item select option {
+  background: #2d3748;
+  color: white;
+  padding: 8px;
 }
 
 .setting-item select:hover:not(:disabled) {
